test/error/DynamicObjectLeakReturn.ci
public class Test
{
	// FIXME:
	static Test Create() => new Test(); //ERROR: Dynamically allocated object must be assigned to a  reference

	public static bool Run()
	{
		return true;
	}
}
